class Agent:
    def __init__(self, villes: list = []) -> None:
        self.villes = villes
